# flower-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_firewall.sh
iot_fed/: __init__.py  client_app.py  dataset.py  server_app.py  task.py
scripts/: start_client.bat  start_client.sh  start_server.sh
src/: main.py  test_final_model.py
src/debug/: debug_checkpoint.py  debug_compare.py  debug_final_model.py  debug_round1.py
src/test/: test_all_rounds.py  test_final_model.py  test_reproducibility.py
